Fixing missing links and a style issue.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.css" />
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/midrange.css" media="all and (max-width: 925px)">
 	<link rel="stylesheet" href="css/tablet.css" media="all and (max-width: 900px)">
+	<link rel="stylesheet" href="css/mid-small.css" media="all and (max-width: 550px)">
 	<link rel="stylesheet" href="css/narrow.css" media="all and (max-width: 420px)">
 	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>
@@ -62,9 +64,9 @@
 <div id="secondary-content">
 <h3>Recipes</h3>	
 <ul data-role="listview" data-inset="true" data-filter="true">
-	<li><a href="#about">Miso Soup</a></li>
-	<li><a href="#contact">Greek Chicken and Pita</a></li>
-	<li><a href="#image">Sushi Rolls</a></li>
+	<li><a href="http://vegetarian.about.com/od/soupssalads/r/MisoSoup.htm">Miso Soup</a></li>
+	<li><a href="http://allrecipes.com/recipe/chicken-souvlaki-gyro-style/">Greek Chicken and Pita<br></a><p>Replace sour cream with fat-free Greek yogurt.</p></li>
+	<li><a href="http://www.foodnetwork.com/recipes/food-network-kitchens/vegetable-sushi-rolls-for-all-ages-recipe/index.html">Sushi Rolls<br></a><p>Substitute brown rice for sushi rice.</p></li>
 </ul>
 
 </div><!-- end of #secondary-content -->
@@ -122,9 +124,9 @@
 <div id="secondary-content">
 <h3>Recipes</h3>	
 <ul data-role="listview" data-inset="true" data-filter="true">
-	<li><a href="#about">Miso Soup</a></li>
-	<li><a href="#contact">Greek Chicken and Pita</a></li>
-	<li><a href="#image">Sushi Rolls</a></li>
+	<li><a href="http://vegetarian.about.com/od/soupssalads/r/MisoSoup.htm">Miso Soup</a></li>
+	<li><a href="http://allrecipes.com/recipe/chicken-souvlaki-gyro-style/">Greek Chicken and Pita<br></a><p>Substitute Fat-free Greek Yogurt for sour cream and make your own whole wheat pita bread.</p></li>
+	<li><a href="http://www.foodnetwork.com/recipes/food-network-kitchens/vegetable-sushi-rolls-for-all-ages-recipe/index.html">Sushi Rolls<br></a><p>Substitute brown rice for sushi rice.  My friend Masako says that is horrible, but avoiding refined carbs are necessary.</p></li>
 </ul>
 
 </div><!-- end of #secondary-content -->
@@ -181,9 +183,9 @@
 <div id="secondary-content">
 <h3>Recipes</h3>	
 <ul data-role="listview" data-inset="true" data-filter="true">
-	<li><a href="#about">Miso Soup</a></li>
-	<li><a href="#contact">Greek Chicken and Pita</a></li>
-	<li><a href="#image">Sushi Rolls</a></li>
+	<li><a href="http://vegetarian.about.com/od/soupssalads/r/MisoSoup.htm">Miso Soup</a></li>
+	<li><a href="http://allrecipes.com/recipe/chicken-souvlaki-gyro-style/">Greek Chicken and Pita<br></a><p>Substitute Fat-free Greek Yogurt for sour cream and make your own whole wheat pita bread.</p></li>
+	<li><a href="http://www.foodnetwork.com/recipes/food-network-kitchens/vegetable-sushi-rolls-for-all-ages-recipe/index.html">Sushi Rolls<br></a><p>Substitute brown rice for sushi rice.  My friend Masako says that is horrible, but avoiding refined carbs are necessary.</p></li>
 </ul>
 
 </div><!-- end of #secondary-content -->
@@ -239,9 +241,9 @@
 <div id="secondary-content">
 <h3>Recipes</h3>	
 <ul data-role="listview" data-inset="true" data-filter="true">
-	<li><a href="#about">Miso Soup</a></li>
-	<li><a href="#contact">Greek Chicken and Pita</a></li>
-	<li><a href="#image">Sushi Rolls</a></li>
+	<li><a href="http://vegetarian.about.com/od/soupssalads/r/MisoSoup.htm">Miso Soup</a></li>
+	<li><a href="http://allrecipes.com/recipe/chicken-souvlaki-gyro-style/">Greek Chicken and Pita<br></a><p>Substitute Fat-free Greek Yogurt for sour cream and make your own whole wheat pita bread.</p></li>
+	<li><a href="http://www.foodnetwork.com/recipes/food-network-kitchens/vegetable-sushi-rolls-for-all-ages-recipe/index.html">Sushi Rolls<br></a><p>Substitute brown rice for sushi rice.  My friend Masako says that is horrible, but avoiding refined carbs are necessary.</p></li>
 </ul>
 
 </div><!-- end of #secondary-content -->
@@ -297,9 +299,9 @@
 <div id="secondary-content">
 <h3>Recipes</h3>	
 <ul data-role="listview" data-inset="true" data-filter="true">
-	<li><a href="#about">Miso Soup</a></li>
-	<li><a href="#contact">Greek Chicken and Pita</a></li>
-	<li><a href="#image">Sushi Rolls</a></li>
+	<li><a href="http://vegetarian.about.com/od/soupssalads/r/MisoSoup.htm">Miso Soup</a></li>
+	<li><a href="http://allrecipes.com/recipe/chicken-souvlaki-gyro-style/">Greek Chicken and Pita<br></a><p>Substitute Fat-free Greek Yogurt for sour cream and make your own whole wheat pita bread.</p></li>
+	<li><a href="http://www.foodnetwork.com/recipes/food-network-kitchens/vegetable-sushi-rolls-for-all-ages-recipe/index.html">Sushi Rolls<br></a><p>Substitute brown rice for sushi rice.  My friend Masako says that is horrible, but avoiding refined carbs are necessary.</p></li>
 </ul>
 
 </div><!-- end of #secondary-content -->
@@ -355,9 +357,9 @@
 <div id="secondary-content">
 <h3>Recipes</h3>	
 <ul data-role="listview" data-inset="true" data-filter="true">
-	<li><a href="#about">Miso Soup</a></li>
-	<li><a href="#contact">Greek Chicken and Pita</a></li>
-	<li><a href="#image">Sushi Rolls</a></li>
+	<li><a href="http://vegetarian.about.com/od/soupssalads/r/MisoSoup.htm">Miso Soup</a></li>
+	<li><a href="http://allrecipes.com/recipe/chicken-souvlaki-gyro-style/">Greek Chicken and Pita<br></a><p>Skip sour cream, use fat-free Greek yogurt.</p></li>
+	<li><a href="http://www.foodnetwork.com/recipes/food-network-kitchens/vegetable-sushi-rolls-for-all-ages-recipe/index.html">Sushi Rolls<br></a><p>Substitute brown rice for sushi rice.</p></li>
 </ul>
 
 </div><!-- end of #secondary-content -->
